// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`WAF Compiler Compiles conditional.jsx 1`] = `
"import { withInstance as _withInstance } from "/framework/runtime/lifecycle.js";
import { createPropsProxy as _createPropsProxy } from "/framework/runtime/props.js";
import { signal as _signal } from "@preact/signals";
import { renderDynamic as _renderDynamic } from "/framework/runtime/dom.js";
class ItemElement extends HTMLElement {
  static observedAttributes = ["name", "isPacked"];
  set name(val) {
    this._propsSignals["name"].value = val;
  }
  set isPacked(val) {
    this._propsSignals["isPacked"].value = val;
  }
  get name() {
    return this._propsSignals["name"].value;
  }
  get isPacked() {
    return this._propsSignals["isPacked"].value;
  }
  constructor() {
    super();
    this._propsSignals = {
      name: _signal(null),
      isPacked: _signal(null)
    };
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onMounts = [];
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    _withInstance(this, () => {
      const el0 = document.createElement("li");
      el0.className = "item";
      _renderDynamic(el0, () => props.isPacked ? (() => {
        const el0 = document.createElement("del");
        _renderDynamic(el0, () => props.name + ' ✅');
        return el0;
      })() : props.name);
      while (this.firstChild) el0.appendChild(this.firstChild);
      this.appendChild(el0);
    });
    this._onMounts.forEach(fn => fn());
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("waf-item", ItemElement);
export default ItemElement;"
`;

exports[`WAF Compiler Compiles children-projection.jsx 1`] = `
"import { withInstance as _withInstance } from "/framework/runtime/lifecycle.js";
import { createPropsProxy as _createPropsProxy } from "/framework/runtime/props.js";
import { signal as _signal } from "@preact/signals";
class WrapperElement extends HTMLElement {
  static observedAttributes = [];
  constructor() {
    super();
    this._propsSignals = {};
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onMounts = [];
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    _withInstance(this, () => {
      const el0 = document.createElement("div");
      el0.className = "wrapper";
      const el1 = document.createElement("header");
      const text2 = document.createTextNode("Header");
      el1.appendChild(text2);
      el0.appendChild(el1);
      const el3 = document.createElement("main");
      el0.appendChild(el3);
      const el4 = document.createElement("footer");
      const text5 = document.createTextNode("Footer");
      el4.appendChild(text5);
      el0.appendChild(el4);
      while (this.firstChild) el0.appendChild(this.firstChild);
      this.appendChild(el0);
    });
    this._onMounts.forEach(fn => fn());
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("waf-wrapper", WrapperElement);
export default WrapperElement;"
`;

exports[`WAF Compiler Compiles lifecycle.jsx 1`] = `
"import { withInstance as _withInstance } from "/framework/runtime/lifecycle.js";
import { createPropsProxy as _createPropsProxy } from "/framework/runtime/props.js";
import { signal as _signal } from "@preact/signals";
import { onMount as _onMount, onCleanup as _onCleanup } from "/framework/runtime/lifecycle.js";
class LifecycleElement extends HTMLElement {
  static observedAttributes = [];
  constructor() {
    super();
    this._propsSignals = {};
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onMounts = [];
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    _withInstance(this, () => {
      _onMount(() => {
        console.log("mounted");
      });
      _onCleanup(() => {
        console.log("cleaned up");
      });
      const el0 = document.createElement("div");
      const text1 = document.createTextNode("Lifecycle");
      el0.appendChild(text1);
      while (this.firstChild) el0.appendChild(this.firstChild);
      this.appendChild(el0);
    });
    this._onMounts.forEach(fn => fn());
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("waf-lifecycle", LifecycleElement);
export default LifecycleElement;"
`;

exports[`WAF Compiler Compiles reactivity.jsx 1`] = `
"import { withInstance as _withInstance } from "/framework/runtime/lifecycle.js";
import { createPropsProxy as _createPropsProxy } from "/framework/runtime/props.js";
import { signal as _signal } from "@preact/signals";
import { renderDynamic as _renderDynamic } from "/framework/runtime/dom.js";
import { signal, effect as _effect } from "@preact/signals";
class ReactivityElement extends HTMLElement {
  static observedAttributes = ["title"];
  set title(val) {
    this._propsSignals["title"].value = val;
  }
  get title() {
    return this._propsSignals["title"].value;
  }
  constructor() {
    super();
    this._propsSignals = {
      title: _signal(null)
    };
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onMounts = [];
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    _withInstance(this, () => {
      const count = signal(0);
      const el0 = document.createElement("div");
      _effect(() => el0.title = props.title);
      const el1 = document.createElement("span");
      _renderDynamic(el1, () => count.value);
      el0.appendChild(el1);
      const el2 = document.createElement("button");
      el2.onclick = () => count.value++;
      const text3 = document.createTextNode("Add");
      el2.appendChild(text3);
      el0.appendChild(el2);
      while (this.firstChild) el0.appendChild(this.firstChild);
      this.appendChild(el0);
    });
    this._onMounts.forEach(fn => fn());
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("waf-reactivity", ReactivityElement);
export default ReactivityElement;"
`;

exports[`WAF Compiler Compiles basic-elements.page.jsx 1`] = `
"export function render(root) {
  const el0 = document.createElement("div");
  const el1 = document.createElement("h1");
  const text2 = document.createTextNode("Hello");
  el1.appendChild(text2);
  el0.appendChild(el1);
  const el3 = document.createElement("p");
  const text4 = document.createTextNode("World");
  el3.appendChild(text4);
  el0.appendChild(el3);
  root.appendChild(el0);
}"
`;

exports[`WAF Compiler Compiles styling.jsx 1`] = `
"import { withInstance as _withInstance } from "/framework/runtime/lifecycle.js";
import { createPropsProxy as _createPropsProxy } from "/framework/runtime/props.js";
import { signal, effect as _effect, signal as _signal } from "@preact/signals";
class StylingTestElement extends HTMLElement {
  static observedAttributes = ["theme"];
  set theme(val) {
    this._propsSignals["theme"].value = val;
  }
  get theme() {
    return this._propsSignals["theme"].value;
  }
  constructor() {
    super();
    this._propsSignals = {
      theme: _signal(null)
    };
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onMounts = [];
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    _withInstance(this, () => {
      const active = signal(true);
      const el0 = document.createElement("div");
      el0.className = "static-class";
      el0.className = "static-classname";
      const el1 = document.createElement("span");
      _effect(() => el1.className = active.value ? "active" : "inactive");
      const text2 = document.createTextNode("Reactive Class");
      el1.appendChild(text2);
      el0.appendChild(el1);
      const el3 = document.createElement("button");
      _effect(() => el3.className = props.theme);
      const text4 = document.createTextNode("Reactive ClassName from Props");
      el3.appendChild(text4);
      el0.appendChild(el3);
      while (this.firstChild) el0.appendChild(this.firstChild);
      this.appendChild(el0);
    });
    this._onMounts.forEach(fn => fn());
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("waf-stylingtest", StylingTestElement);
export default StylingTestElement;"
`;

exports[`WAF Compiler Compiles comments.page.jsx 1`] = `
"export function render(root) {
  const el0 = document.createElement("div");
  const el1 = document.createElement("h1");
  const text2 = document.createTextNode("Title");
  el1.appendChild(text2);
  el0.appendChild(el1);
  const el3 = document.createElement("p");
  el3.className = "foo";
  const text4 = document.createTextNode("Content");
  el3.appendChild(text4);
  el0.appendChild(el3);
  root.appendChild(el0);
}"
`;

exports[`WAF Compiler Compiles svg.jsx 1`] = `
"import { withInstance as _withInstance } from "/framework/runtime/lifecycle.js";
import { createPropsProxy as _createPropsProxy } from "/framework/runtime/props.js";
import { signal, effect as _effect, signal as _signal } from "@preact/signals";
class SvgTestElement extends HTMLElement {
  static observedAttributes = [];
  constructor() {
    super();
    this._propsSignals = {};
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onMounts = [];
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    _withInstance(this, () => {
      const strokeWidth = signal(2);
      const el0 = document.createElement("svg");
      el0.setAttribute("width", "100");
      el0.setAttribute("height", "100");
      el0.setAttribute("view-box", "0 0 100 100");
      const el1 = document.createElement("circle");
      el1.setAttribute("cx", "50");
      el1.setAttribute("cy", "50");
      el1.setAttribute("r", "40");
      el1.setAttribute("stroke", "red");
      _effect(() => el1.setAttribute("stroke-width", strokeWidth.value));
      el1.setAttribute("fill", "transparent");
      el0.appendChild(el1);
      const el2 = document.createElement("path");
      el2.setAttribute("d", "M 10 10 L 90 90");
      el2.setAttribute("stroke", "blue");
      el2.setAttribute("stroke-linecap", "round");
      el0.appendChild(el2);
      while (this.firstChild) el0.appendChild(this.firstChild);
      this.appendChild(el0);
    });
    this._onMounts.forEach(fn => fn());
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("waf-svgtest", SvgTestElement);
export default SvgTestElement;"
`;

exports[`WAF Compiler Compiles component-props.jsx 1`] = `
"import { renderDynamic as _renderDynamic } from "/framework/runtime/dom.js";
import { withInstance as _withInstance } from "/framework/runtime/lifecycle.js";
import { createPropsProxy as _createPropsProxy } from "/framework/runtime/props.js";
import { signal as _signal, effect as _effect } from "@preact/signals";
class ParentElement extends HTMLElement {
  static observedAttributes = [];
  constructor() {
    super();
    this._propsSignals = {};
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onMounts = [];
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    _withInstance(this, () => {
      const count = _signal(0);
      const el0 = document.createElement("div");
      const el1 = document.createElement("waf-child");
      _effect(() => el1.val = count.value);
      el0.appendChild(el1);
      const el2 = document.createElement("button");
      el2.onclick = () => count.value++;
      const text3 = document.createTextNode("Inc");
      el2.appendChild(text3);
      el0.appendChild(el2);
      while (this.firstChild) el0.appendChild(this.firstChild);
      this.appendChild(el0);
    });
    this._onMounts.forEach(fn => fn());
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("waf-parent", ParentElement);
export default ParentElement;
class ChildElement extends HTMLElement {
  static observedAttributes = ["val"];
  set val(val) {
    this._propsSignals["val"].value = val;
  }
  get val() {
    return this._propsSignals["val"].value;
  }
  constructor() {
    super();
    this._propsSignals = {
      val: _signal(null)
    };
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onMounts = [];
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    _withInstance(this, () => {
      const el0 = document.createElement("div");
      _renderDynamic(el0, () => props.val);
      while (this.firstChild) el0.appendChild(this.firstChild);
      this.appendChild(el0);
    });
    this._onMounts.forEach(fn => fn());
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("waf-child", ChildElement);"
`;

exports[`WAF Compiler Compiles inline-styles.jsx 1`] = `
"import { withInstance as _withInstance } from "/framework/runtime/lifecycle.js";
import { createPropsProxy as _createPropsProxy } from "/framework/runtime/props.js";
import { signal, effect as _effect, signal as _signal } from "@preact/signals";
class StyleTestElement extends HTMLElement {
  static observedAttributes = [];
  constructor() {
    super();
    this._propsSignals = {};
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onMounts = [];
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    _withInstance(this, () => {
      const color = signal("red");
      const el0 = document.createElement("div");
      _effect(() => Object.assign(el0.style, {
        display: "flex",
        gap: "10px"
      }));
      const el1 = document.createElement("span");
      _effect(() => Object.assign(el1.style, {
        color: color.value
      }));
      const text2 = document.createTextNode("Reactive Style");
      el1.appendChild(text2);
      el0.appendChild(el1);
      const el3 = document.createElement("div");
      el3.setAttribute("style", "font-weight: bold;");
      const text4 = document.createTextNode("Static Style String");
      el3.appendChild(text4);
      el0.appendChild(el3);
      while (this.firstChild) el0.appendChild(this.firstChild);
      this.appendChild(el0);
    });
    this._onMounts.forEach(fn => fn());
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("waf-styletest", StyleTestElement);
export default StyleTestElement;"
`;

exports[`WAF Compiler Compiles macros.jsx 1`] = `
"import { withInstance as _withInstance } from "/framework/runtime/lifecycle.js";
import { createPropsProxy as _createPropsProxy } from "/framework/runtime/props.js";
import { renderDynamic as _renderDynamic } from "/framework/runtime/dom.js";
import { signal as _signal, computed as _computed, effect as _effect } from "@preact/signals";
class MacroTestElement extends HTMLElement {
  static observedAttributes = [];
  constructor() {
    super();
    this._propsSignals = {};
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onMounts = [];
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    _withInstance(this, () => {
      const count = _signal(0);
      const doubled = _computed(() => count.value * 2);
      _effect(() => {
        console.log("Count changed:", count.value);
      });
      const el0 = document.createElement("div");
      const el1 = document.createElement("p");
      const text2 = document.createTextNode("Count: ");
      el1.appendChild(text2);
      _renderDynamic(el1, () => count.value);
      el0.appendChild(el1);
      const el3 = document.createElement("p");
      const text4 = document.createTextNode("Doubled: ");
      el3.appendChild(text4);
      _renderDynamic(el3, () => doubled.value);
      el0.appendChild(el3);
      const el5 = document.createElement("button");
      el5.onclick = () => count.value++;
      const text6 = document.createTextNode("Increment");
      el5.appendChild(text6);
      el0.appendChild(el5);
      while (this.firstChild) el0.appendChild(this.firstChild);
      this.appendChild(el0);
    });
    this._onMounts.forEach(fn => fn());
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("waf-macrotest", MacroTestElement);
export default MacroTestElement;"
`;

exports[`WAF Compiler Compiles whitespace.page.jsx 1`] = `
"import { renderDynamic as _renderDynamic } from "/framework/runtime/dom.js";
export function render(root) {
  const name = "WAF";
  const el0 = document.createElement("div");
  const el1 = document.createElement("span");
  const text2 = document.createTextNode("Hello ");
  el1.appendChild(text2);
  _renderDynamic(el1, () => name);
  const text3 = document.createTextNode("!");
  el1.appendChild(text3);
  el0.appendChild(el1);
  const el4 = document.createElement("p");
  const text5 = document.createTextNode("Line 1Line 2");
  el4.appendChild(text5);
  el0.appendChild(el4);
  const el6 = document.createElement("div");
  const text7 = document.createTextNode("Spaces should be preserved here -> ");
  el6.appendChild(text7);
  el0.appendChild(el6);
  root.appendChild(el0);
}"
`;
